force-app/main/default/objects/Pet__c/fields/Breed__c.field-meta.xml
<CustomField>
    <fullName>Breed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Breed</label>
    <referenceTo>Breed__c</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <type>Lookup</type>
</CustomField>