force-app/main/default/objects/Pet__c/fields/Date_Adopted__c.field-meta.xml
<CustomField>
    <fullName>Date_Adopted__c</fullName>
    <label>Date Adopted</label>
    <type>Date</type>
</CustomField>