force-app/main/default/objects/Pet__c/fields/Date_Arrived_In_Shelter__c.field-meta.xml
<CustomField>
    <fullName>Date_Arrived_In_Shelter__c</fullName>
    <label>Date Arrived In Shelter</label>
    <type>Date</type>
</CustomField>