force-app/main/default/objects/Pet__c/fields/Last_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Last_Appointment__c</fullName>
    <label>Last Appointment</label>
    <type>Date</type>
</CustomField>