force-app/main/default/objects/Pet__c/fields/Medical_Status__c.field-meta.xml
<CustomField>
    <fullName>Medical_Status__c</fullName>
    <label>Medical Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checked</fullName>
            </value>
            <value>
                <fullName>Not Checked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>