force-app/main/default/objects/Pet__c/fields/Next_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Next_Appointment__c</fullName>
    <label>Next Appointment</label>
    <type>Date</type>
</CustomField>