force-app/main/default/objects/Pet__c/fields/Other_Medical_Issues__c.field-meta.xml
<CustomField>
    <fullName>Other_Medical_Issues__c</fullName>
    <label>Other Medical Issues</label>
    <type>TextArea</type>
</CustomField>