force-app/main/default/objects/Pet__c/fields/Shelter__c.field-meta.xml
<CustomField>
    <fullName>Shelter__c</fullName>
    <label>Shelter</label>
    <referenceTo>Shelter__c</referenceTo>
    <relationshipLabel>Pets</relationshipLabel>
    <relationshipName>Pets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>