force-app/main/default/objects/Pet__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Shelter</fullName>
            </value>
            <value>
                <fullName>Adopted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>