force-app/main/default/objects/Pet__c/fields/Vaccines__c.field-meta.xml
<CustomField>
    <fullName>Vaccines__c</fullName>
    <label>Vaccines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bordetellosis (&quot;kennel cough&quot;)</fullName>
            </value>
            <value>
                <fullName>Canine adenovirus-2</fullName>
            </value>
            <value>
                <fullName>Canine distemper</fullName>
            </value>
            <value>
                <fullName>Canine enteric coronavirus</fullName>
            </value>
            <value>
                <fullName>Canine influenza</fullName>
            </value>
            <value>
                <fullName>Canine parainfluenza</fullName>
            </value>
            <value>
                <fullName>Canine parvovirus infection (&quot;parvo&quot;)</fullName>
            </value>
            <value>
                <fullName>Heartworm disease</fullName>
            </value>
            <value>
                <fullName>Intestinal worms</fullName>
            </value>
            <value>
                <fullName>Leptospirosis</fullName>
            </value>
            <value>
                <fullName>Lyme disease</fullName>
            </value>
            <value>
                <fullName>Rabies</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>