force-app/main/default/objects/Pet__c/recordTypes/Pet_Checked.recordType-meta.xml
<RecordType>
    <fullName>Pet_Checked</fullName>
    <active>true</active>
    <label>Pet Checked</label>
</RecordType>