force-app/main/default/objects/Pet__c/recordTypes/Pet_Not_Checked.recordType-meta.xml
<RecordType>
    <fullName>Pet_Not_Checked</fullName>
    <active>true</active>
    <label>Pet Not Checked</label>
</RecordType>