force-app/main/default/objects/Pet__c/validationRules/No_room_in_shelter.validationRule-meta.xml
<ValidationRule>
    <fullName>No_room_in_shelter</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Shelter__r.Avialable__c)</errorConditionFormula>
    <errorDisplayField>Shelter__c</errorDisplayField>
    <errorMessage>This Shelter Is not Available</errorMessage>
</ValidationRule>